--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <h1>css flexbox photo gallery</h1>
+        <h1>Testing</h1>
     </header>
     <main id="gallery">
         <img src="https://picsum.photos/1080/720?random=1" alt="image-1">
