--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PRIN135-Activity-05: Photo Gallery</title>
+    <title>Photo Gallery</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
     <header>
         <h1>css flexbox photo gallery</h1>
-        <h1>Testing</h1>
     </header>
     <main id="gallery">
         <img src="https://picsum.photos/1080/720?random=1" alt="image-1">
